Installed gulp and gutil

--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "workflows",
   "version": "0.0.1",
   "description": "A project to showcase workflows",
-  
   "repository": {
     "type": "git",
     "url": "*?.git"
   },
-  "author": "Martin Sirkovsky"
+  "author": "Martin Sirkovsky",
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-util": "^3.0.7"
+  }
 }
